--- a/app/src/main/res/layout/content_bienvenida.xml
+++ b/app/src/main/res/layout/content_bienvenida.xml
@@ -1,17 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="ipo2.esi.miikea.Bienvenida"
-    tools:showIn="@layout/activity_bienvenida">
+    tools:showIn="@layout/activity_bienvenida"
+    android:weightSum="1">
 
-    <TextView
+    <ImageView
+        android:id="@+id/imgBienvenida"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_weight="0.35"
+        app:srcCompat="@drawable/sofa"
+        android:layout_above="@+id/txtBienvenida"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="70dp" />
+
+    <TextView
+        android:id="@+id/txtBienvenida"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_centerVertical="true"
         android:text="@string/bienvenido_Ikea"
+        android:textAlignment="center"
+        android:textAllCaps="false"
+        android:textColor="?attr/colorPrimary"
+        android:textSize="25sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.409"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -19,4 +39,18 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.172" />
 
-</android.support.constraint.ConstraintLayout>
+    <Button
+        android:id="@+id/btnEntrar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/imgBienvenida"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="74dp"
+        android:fontFamily="sans-serif"
+        android:text="@string/btn_Entrar"
+        android:textAlignment="center"
+        android:textColor="@color/colorPrimaryDark"
+        android:textSize="50sp"
+        android:textStyle="bold" />
+
+</RelativeLayout>
