--- a/app/src/main/res/layout/activity_registrar.xml
+++ b/app/src/main/res/layout/activity_registrar.xml
@@ -4,48 +4,51 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/txtEspacio"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-
-    <TextView
-        android:id="@+id/lblUsuario"
+        android:id="@+id/lblNombreNuevo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/txtUsuario" />
+        android:text="@string/txtNombreNuevo"
+        android:textSize="20sp" />
 
     <EditText
-        android:id="@+id/txtUsuario"
+        android:id="@+id/txtMail"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="textEmailAddress"
+        android:textSize="20sp" />
+
+    <TextView
+        android:id="@+id/lblContrasena"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/txtContrasena"
+        android:textSize="20sp" />
+
+    <EditText
+        android:id="@+id/txtContrasena"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="textPersonName" />
 
     <TextView
-        android:id="@+id/lblPassword"
+        android:id="@+id/lblRepiteContrasena"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/lblPassword" />
+        android:text="@string/lblRepiteContrasena"
+        android:textSize="20sp" />
 
     <EditText
-        android:id="@+id/txtPassword"
+        android:id="@+id/txtRepiteContrasena"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="textPassword" />
 
     <Button
-        android:id="@+id/btnLogin"
+        android:id="@+id/btnRegistrarse"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:onClick="btn_Loguearse"
-        android:text="@string/btnLogin"
-        android:textAlignment="center" />
-
-    <Button
-        android:id="@+id/btnCuenta"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:onClick="oyente_btnRegistrarse"
-        android:text="@string/btnCuenta" />
+        android:text="@string/btnRegistrarse" />
 </LinearLayout>
