--- a/app/src/main/res/layout/activity_registrar.xml
+++ b/app/src/main/res/layout/activity_registrar.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:baselineAligned="false"
+    android:orientation="vertical"
+    android:weightSum="1">
 
     <TextView
         android:id="@+id/lblNombreNuevo"
@@ -26,29 +30,24 @@
         android:textSize="20sp" />
 
     <EditText
-        android:id="@+id/txtContrasena"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textPersonName" />
-
-    <TextView
-        android:id="@+id/lblRepiteContrasena"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/lblRepiteContrasena"
-        android:textSize="20sp" />
-
-    <EditText
-        android:id="@+id/txtRepiteContrasena"
+        android:id="@+id/txtPassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="textPassword" />
 
-    <Button
+    <ImageButton
         android:id="@+id/btnRegistrarse"
+        style="@android:style/Widget.DeviceDefault.ImageButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/btnRegistrarse" />
+        app:srcCompat="@android:drawable/ic_menu_add" />
+
+    <Button
+        android:id="@+id/btnVolver"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="oyente_btnVolver"
+        android:text="@string/btnVolver" />
+
 </LinearLayout>
