Ya funciona la lista dinámica, solo falta añadir el formulario para ir añadiendo los muebles.

--- a/app/src/main/res/layout/activity_registrar.xml
+++ b/app/src/main/res/layout/activity_registrar.xml
@@ -41,6 +41,7 @@
         style="@android:style/Widget.DeviceDefault.ImageButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:visibility="visible"
         app:srcCompat="@android:drawable/ic_menu_add" />
 
     <Button
