--- a/app/src/main/res/layout/activity_lista.xml
+++ b/app/src/main/res/layout/activity_lista.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -7,20 +7,10 @@
         android:id="@+id/lblSeleccionado"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="20sp" />
-
-    <Button
-        android:id="@+id/btnCargarProductos"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:onClick="oyente_btnCargarProductos"
-        android:text="@string/btnCargarProductos"
-        android:textSize="10sp" />
+        android:text="TextView" />
 
     <ListView
         android:id="@+id/lstMuebles"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:choiceMode="singleChoice" />
-
-</android.support.design.widget.CoordinatorLayout>
+        android:layout_height="match_parent" />
+</LinearLayout>
