--- a/app/src/main/res/layout/activity_registrar.xml
+++ b/app/src/main/res/layout/activity_registrar.xml
@@ -36,14 +36,15 @@
         android:ems="10"
         android:inputType="textPassword" />
 
-    <ImageButton
+    <Button
         android:id="@+id/btnRegistrarse"
         android:layout_width="match_parent"
-        android:layout_height="88dp"
-        app:srcCompat="@drawable/registrar" />
+        android:layout_height="wrap_content"
+        android:onClick="oyente_btnVolver"
+        android:text="@string/btnRegistrarse" />
 
     <Button
-        android:id="@+id/btnVolver"
+        android:id="@+id/button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:onClick="oyente_btnVolver"
